fixing text auto zoom on iphone

--- a/styles/global.css
+++ b/styles/global.css
@@ -9,6 +9,7 @@ body {
   line-height: 25px;
   font-size: 14px;
   height: 100%;
+  -webkit-text-size-adjust: 100%;
 }
 
 * {
